fix: change align content and min-height

--- a/src/assets/styles/blocks/our_service.sass
+++ b/src/assets/styles/blocks/our_service.sass
@@ -1,5 +1,5 @@
 .service-main
-    min-height: 100vh
+    padding: 5vh 0
     position: relative
     background: #ecf0f1
 
@@ -8,7 +8,7 @@
     grid-template-rows: .1fr 1fr
     grid-template-columns: .3fr 1fr
     grid-row-gap: 20px
-    align-items: center
+    align-self: center
     padding: .5rem
     padding-top: 1rem
     
@@ -50,9 +50,7 @@
     div:nth-child(6)
         grid-column: 4/5
         grid-row: 2/3
-   
-        
-    
+
 .our-service-left
     grid-row: 2/3
     h2
@@ -62,11 +60,11 @@
         margin-left: 0.5rem
     p
      margin: 0.5em
-     font-size: 16pt
+     font-size: 14pt
      font-family: "Roboto-md"
      color: black
-     letter-spacing: 1.3px
-     line-height: 1.2
+     letter-spacing: 1.1px
+     line-height: 1.3
      font-weight: 500
         
 .our-service-items
